src/test_files/invalid/i3_reassign.vip
# Asignación dentro de asignación
int b = (a = 3) + 2